--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -334,7 +334,7 @@
 
 /* Стили для предварительного просмотра SVG паттернов */
 .pattern-preview {
-    background-size: 40px 40px;
+    background-size: 100%;
     background-repeat: repeat;
     transition: all 0.3s ease;
     position: relative;
@@ -354,7 +354,7 @@
 }
 
 .pattern-preview:hover::before {
-    opacity: 1;
+    opacity: 0;
 }
 
 /* Стили для select паттернов */
